--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "This Week in VC4/VC5"
 description: ""
-url: "https://anholt.github.io/"
+url: "https://anholt.github.io"
 baseurl: "/twivc4"
 google_analytics: 
 
