--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "This Week in VC4/VC5"
+title: "This Week in V3D"
 description: ""
 url: "https://anholt.github.io"
 baseurl: "/twivc4"
